--- a/app/src/main/res/layout/primer_fragmento.xml
+++ b/app/src/main/res/layout/primer_fragmento.xml
@@ -2,5 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/txtDescripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Este es Primer Fragmento"
+        android:textSize="25sp" />
 
+    <Button
+        android:id="@+id/btnPrimerBoton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="Primer Boton"
+        android:textSize="20sp" />
 </RelativeLayout>
