--- a/app/src/main/res/layout/segundo_fragmento.xml
+++ b/app/src/main/res/layout/segundo_fragmento.xml
@@ -2,5 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/txtDescripcion2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Este es Segundo Fragmento"
+        android:textSize="25sp" />
 
+    <Button
+        android:id="@+id/btnSegundoBoton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Segundo Boton"
+        android:textSize="20sp" />
 </RelativeLayout>
